--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,12 @@
         <item>C</item>
 
     </string-array>
+
+    <string-array name="DropdownUnterklassenStatistik">
+        <item>A</item>
+        <item>B</item>
+        <item>C</item>
+        <item>Beliebig</item>
+
+    </string-array>
 </resources>
