--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,14 @@
 
     </string-array>
 
+    <string-array name="DropdownKlassenStatistik">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>Beliebig</item>
+
+    </string-array>
+
     <string-array name="DropdownUnterklassen">
         <item>A</item>
         <item>B</item>
