--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
     <string name="logout_name">LogOut</string>
     <string name="aboutus_name">About Us</string>
     <string name="help_name">Help</string>
+    <string name="nav_disziplin">Disziplin</string>
+    <string name="nav_stat">Statistik</string>
 
     <string-array name="DropdownKlassen">
         <item>1</item>
@@ -33,4 +35,7 @@
         <item>Beliebig</item>
 
     </string-array>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
